Fixes for responsiveness on small widths for .login-container

--- a/static/nologin/css/styles.css
+++ b/static/nologin/css/styles.css
@@ -194,6 +194,14 @@ body {
 
 @media screen and (max-width: 700px) {
 
+  .login-container {
+    width: 75%;
+  }
+
+  .login-container > .section {
+    padding: 0px 20px 0px 20px;
+  }
+  
   .homepage-nav {
     padding-top: 50px;
   }
